export type Member = {
    id: string,
    discord_user_id: string,
    name: string,
}